@@ -46,11 +46,16 @@ ISABELLE_BUILD_OPTIONS=""
 ### Document preparation (cf. isabelle latex/document)
 ###
 
-ISABELLE_LATEX="latex"
-ISABELLE_PDFLATEX="pdflatex"
+ISABELLE_LATEX="latex -file-line-error"
+ISABELLE_PDFLATEX="pdflatex -file-line-error"
 ISABELLE_BIBTEX="bibtex"
 ISABELLE_MAKEINDEX="makeindex"
 ISABELLE_EPSTOPDF="epstopdf"
+
+if [ "$ISABELLE_PLATFORM_FAMILY" = "windows" ]; then
+  ISABELLE_LATEX="latex -c-style-errors"
+  ISABELLE_PDFLATEX="pdflatex -c-style-errors"
+fi
 
 
 ###
